Learn: remove hidden divs

--- a/files/en-us/learn/css/building_blocks/advanced_styling_effects/index.html
+++ b/files/en-us/learn/css/building_blocks/advanced_styling_effects/index.html
@@ -81,11 +81,9 @@ article {
 
 <p>You can also specify multiple box shadows in a single <code>box-shadow</code> declaration, by separating them with commas:</p>
 
-<div class="hidden">
-<pre class="brush: html">&lt;article class="multiple"&gt;
+<pre class="brush: html hidden">&lt;article class="multiple"&gt;
   &lt;p&gt;&lt;strong&gt;Warning&lt;/strong&gt;: The thermostat on the cosmic transcender has reached a critical level.&lt;/p&gt;
 &lt;/article&gt;</pre>
-</div>
 
 <pre class="brush: css">p {
   margin: 0;
