--- a/files/en-us/learn/css/howto/create_fancy_boxes/index.html
+++ b/files/en-us/learn/css/howto/create_fancy_boxes/index.html
@@ -34,9 +34,7 @@ tags:
 
 <h3 id="Making_circles">Making circles</h3>
 
-<div class="hidden">
-<pre class="brush: html">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
-</div>
+<pre class="brush: html hidden">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
 
 <p>This is something that is both very simple and very fun. The {{cssxref("border-radius")}} property is made to create a rounded corner applied to boxes, but what happens if the radius size is equal or larger than the actual width of the box?</p>
 
@@ -80,9 +78,7 @@ tags:
  <li>Backgrounds can be either solid colors or images: solid color always fills the whole surface but images can be scaled and positioned.</li>
 </ul>
 
-<div class="hidden">
-<pre class="brush: html">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
-</div>
+<pre class="brush: html hidden">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
 
 <p>Okay, let's have fun with backgrounds:</p>
 
@@ -127,9 +123,7 @@ tags:
 
 <h3 id="A_cloud">A cloud</h3>
 
-<div class="hidden">
-<pre class="brush: html">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
-</div>
+<pre class="brush: html hidden">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
 
 <p>Let's have an example by turning our box into a cloud:</p>
 
@@ -270,9 +264,7 @@ blockquote i {
 
 <p>So it's possible to create a wonderful effect when we mix all of this together. At some point, to accomplish such box embellishment is a matter of creativity, both in design and technical use of CSS properties. By doing such it's possible to create optical illusions that can bring your boxes alive like in this example:</p>
 
-<div class="hidden">
-<pre class="brush: html">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
-</div>
+<pre class="brush: html hidden">&lt;div class="fancy"&gt;Hi! I want to be fancy.&lt;/div&gt;</pre>
 
 <p>Let's create some partial drop shadow effect.  The {{cssxref("box-shadow")}} property allow us to create inner light and a flat drop shadow effect, but with some little extra work it becomes possible to create a more natural geometry by using pseudo-element and the {{cssxref("transform")}} property.</p>
 
