--- a/files/en-us/learn/javascript/first_steps/a_first_splash/index.html
+++ b/files/en-us/learn/javascript/first_steps/a_first_splash/index.html
@@ -52,118 +52,7 @@ tags:
 
 <p>In this article we'll show you how to build up the simple game you can see below:</p>
 
-<div class="hidden">
-<h6 id="Top_hidden_code">Top hidden code</h6>
-
-<pre class="brush: html">&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-
-&lt;head&gt;
-    &lt;meta charset="utf-8"&gt;
-    &lt;title&gt;Number guessing game&lt;/title&gt;
-    &lt;style&gt;
-        html {
-            font-family: sans-serif;
-        }
-
-        body {
-            width: 50%;
-            max-width: 800px;
-            min-width: 480px;
-            margin: 0 auto;
-        }
-
-        .lastResult {
-            color: white;
-            padding: 3px;
-        }
-    &lt;/style&gt;
-&lt;/head&gt;
-
-&lt;body&gt;
-    &lt;h1&gt;Number guessing game&lt;/h1&gt;
-    &lt;p&gt;We have selected a random number between 1 and 100. See if you can guess it in 10 turns or fewer. We'll tell you if your guess was too high or too low.&lt;/p&gt;
-    &lt;div class="form"&gt; &lt;label for="guessField"&gt;Enter a guess: &lt;/label&gt;&lt;input type="text" id="guessField" class="guessField"&gt; &lt;input type="submit" value="Submit guess" class="guessSubmit"&gt; &lt;/div&gt;
-    &lt;div class="resultParas"&gt;
-        &lt;p class="guesses"&gt;&lt;/p&gt;
-        &lt;p class="lastResult"&gt;&lt;/p&gt;
-        &lt;p class="lowOrHi"&gt;&lt;/p&gt;
-    &lt;/div&gt;
-&lt;script&gt;
-    // Your JavaScript goes here
-    let randomNumber = Math.floor(Math.random() * 100) + 1;
-    const guesses = document.querySelector('.guesses');
-    const lastResult = document.querySelector('.lastResult');
-    const lowOrHi = document.querySelector('.lowOrHi');
-    const guessSubmit = document.querySelector('.guessSubmit');
-    const guessField = document.querySelector('.guessField');
-    let guessCount = 1;
-    let resetButton;
-
-    function checkGuess() {
-      let userGuess = Number(guessField.value);
-      if (guessCount === 1) {
-        guesses.textContent = 'Previous guesses: ';
-      }
-
-      guesses.textContent += userGuess + ' ';
-
-      if (userGuess === randomNumber) {
-        lastResult.textContent = 'Congratulations! You got it right!';
-        lastResult.style.backgroundColor = 'green';
-        lowOrHi.textContent = '';
-        setGameOver();
-      } else if (guessCount === 10) {
-        lastResult.textContent = '!!!GAME OVER!!!';
-        lowOrHi.textContent = '';
-        setGameOver();
-      } else {
-        lastResult.textContent = 'Wrong!';
-        lastResult.style.backgroundColor = 'red';
-        if (userGuess &lt; randomNumber) {
-          lowOrHi.textContent = 'Last guess was too low!' ;
-        } else if(userGuess &gt; randomNumber) {
-          lowOrHi.textContent = 'Last guess was too high!';
-        }
-      }
-
-      guessCount++;
-      guessField.value = '';
-    }
-
-    guessSubmit.addEventListener('click', checkGuess);
-
-    function setGameOver() {
-      guessField.disabled = true;
-      guessSubmit.disabled = true;
-      resetButton = document.createElement('button');
-      resetButton.textContent = 'Start new game';
-      document.body.append(resetButton);
-      resetButton.addEventListener('click', resetGame);
-    }
-
-    function resetGame() {
-      guessCount = 1;
-      const resetParas = document.querySelectorAll('.resultParas p');
-      for(let i = 0 ; i &lt; resetParas.length ; i++) {
-        resetParas[i].textContent = '';
-      }
-
-      resetButton.parentNode.removeChild(resetButton);
-      guessField.disabled = false;
-      guessSubmit.disabled = false;
-      guessField.value = '';
-      guessField.focus();
-      lastResult.style.backgroundColor = 'white';
-      randomNumber = Math.floor(Math.random() * 100) + 1;
-    }
-&lt;/script&gt;
-
-&lt;/body&gt;
-&lt;/html&gt;</pre>
-</div>
-
-<p>{{ EmbedLiveSample('Top_hidden_code', '100%', 320, "", "", "hide-codepen-jsfiddle") }}</p>
+{{EmbedGHLiveSample("learning-area/javascript/introduction-to-js-1/first-splash/number-guessing-game", 900, 300)}}
 
 <p>Have a go at playing it — familiarize yourself with the game before you move on.</p>
 
