--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/html_and_css/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/html_and_css/index.html
@@ -153,47 +153,7 @@ tags:
 
 <p>The output of this code is as follows:</p>
 
-<div class="hidden">
-<h6 id="Hidden_example">Hidden example</h6>
-
-<pre class="brush: css">label {
-        float: left;
-        width: 30%;
-        text-align: right;
-      }
-
-      input {
-        float: right;
-        width: 65%;
-      }
-
-      label, input {
-        margin-bottom: 20px;
-      }
-
-      div {
-        clear: both;
-        margin: 10px;
-      }
-
-      body {
-        width: 400px;
-        margin: 0 auto;
-      }</pre>
-
-<pre class="brush: html">&lt;form&gt;
-      &lt;div&gt;
-        &lt;label for="date"&gt;Enter a date:&lt;/label&gt;
-        &lt;input id="date" type="date"&gt;
-      &lt;/div&gt;
-      &lt;div&gt;
-        &lt;label for="time"&gt;Enter a time:&lt;/label&gt;
-        &lt;input id="time" type="time"&gt;
-      &lt;/div&gt;
-    &lt;/form&gt;</pre>
-</div>
-
-<p>{{ EmbedLiveSample('Hidden_example', '100%', 150) }}</p>
+{{EmbedGHLiveSample("learning-area/tools-testing/cross-browser-testing/html-css/forms-test", '100%', 150)}}
 
 <div class="note">
 <p><strong>Note:</strong> You can also see this running live as <a href="https://mdn.github.io/learning-area/tools-testing/cross-browser-testing/html-css/forms-test.html">forms-test.html</a> on GitHub (see the <a href="https://github.com/mdn/learning-area/blob/master/tools-testing/cross-browser-testing/html-css/forms-test.html">source code</a> also).</p>
