--- a/files/en-us/learn/html/cheatsheet/index.html
+++ b/files/en-us/learn/html/cheatsheet/index.html
@@ -171,8 +171,8 @@ This text is in predefined format.</pre>
    <td>Embedded Video</td>
    <td>&lt;video controls src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"&gt;The &lt;code&gt;video&lt;/code&gt; element is unsupported.&lt;/video&gt;</td>
    <td>
-    <div class="hidden" id="sampleVideo">
-      <pre class="brush: html">&lt;video controls src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm" style="width: 100%;" &gt;The &lt;code&gt;video&lt;/code&gt; element is unsupported.&lt;/video&gt;</pre>
+    <div id="sampleVideo">
+      <pre class="brush: html hidden">&lt;video controls src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm" style="width: 100%;" &gt;The &lt;code&gt;video&lt;/code&gt; element is unsupported.&lt;/video&gt;</pre>
     </div>
     {{EmbedLiveSample("sampleVideo",300,180,"","", "nobutton")}}
    </td>
