--- a/files/en-us/learn/javascript/building_blocks/events/index.html
+++ b/files/en-us/learn/javascript/building_blocks/events/index.html
@@ -84,7 +84,7 @@ btn.onclick = function() {
 
 <p>The example output is as follows:</p>
 
-<p>{{ EmbedLiveSample('A_simple_example', '100%', 200, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('A_simple_example', '100%', 200, "", "") }}</p>
 
 <h3 id="Its_not_just_web_pages">It's not just web pages</h3>
 
@@ -285,9 +285,27 @@ btn.addEventListener('click', bgChange);</pre>
   <p><strong>Note:</strong> You can use any name you like for the event object — you just need to choose a name that you can then use to reference it inside the event handler function. <code>e</code>/<code>evt</code>/<code>event</code> are most commonly used by developers because they are short and easy to remember. It's always good to be consistent — with yourself, and with others if possible.</p>
 </div>
 
+<h4>Using event targets</h4>
+
 <p><code>e.target</code> is incredibly useful when you want to set the same event handler on multiple elements and do something to all of them when an event occurs on them. You might, for example, have a set of 16 tiles that disappear when selected. It is useful to always be able to just set the thing to disappear as <code>e.target</code>, rather than having to select it in some more difficult way. In the following example (see <a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/events/useful-eventtarget.html">useful-eventtarget.html</a> for the full source code; also see it <a href="https://mdn.github.io/learning-area/javascript/building-blocks/events/useful-eventtarget.html">running live</a> here), we create 16 {{htmlelement("div")}} elements using JavaScript. We then select all of them using {{domxref("document.querySelectorAll()")}}, then loop through each one, adding an <code>onclick</code> handler to each that makes it so that a random color is applied to each one when selected:</p>
 
-<pre class="brush: js">const divs = document.querySelectorAll('div');
+<pre class="brush: js">
+for (let i = 1; i &lt;= 16; i++) {
+  const myDiv = document.createElement('div');
+  myDiv.style.backgroundColor = "red";
+  document.body.appendChild(myDiv);
+}
+
+function random(number) {
+  return Math.floor(Math.random()*number);
+}
+
+function bgChange() {
+  var rndCol = 'rgb(' + random(255) + ',' + random(255) + ',' + random(255) + ')';
+  return rndCol;
+}
+
+const divs = document.querySelectorAll('div');
 
 for (let i = 0; i &lt; divs.length; i++) {
   divs[i].onclick = function(e) {
@@ -297,52 +315,14 @@ for (let i = 0; i &lt; divs.length; i++) {
 
 <p>The output is as follows (try clicking around on it — have fun):</p>
 
-<div class="hidden">
-<h6 id="Hidden_example">Hidden example</h6>
+<pre class="brush: css hidden">
+div {
+  height: 100px;
+  width: 25%;
+  float: left;
+}</pre>
 
-<pre class="brush: html">&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-  &lt;head&gt;
-    &lt;meta charset="utf-8"&gt;
-    &lt;title&gt;Useful event target example&lt;/title&gt;
-    &lt;style&gt;
-      div {
-        height: 100px;
-        width: 25%;
-        float: left;
-      }
-    &lt;/style&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-    &lt;script&gt;
-      for (let i = 1; i &lt;= 16; i++) {
-        const myDiv = document.createElement('div');
-        myDiv.style.backgroundColor = "red";
-        document.body.appendChild(myDiv);
-      }
-
-      function random(number) {
-        return Math.floor(Math.random()*number);
-      }
-
-      function bgChange() {
-        var rndCol = 'rgb(' + random(255) + ',' + random(255) + ',' + random(255) + ')';
-        return rndCol;
-      }
-
-      const divs = document.querySelectorAll('div');
-
-      for (let i = 0; i &lt; divs.length; i++) {
-        divs[i].onclick = function(e) {
-          e.target.style.backgroundColor = bgChange();
-        }
-      }
-    &lt;/script&gt;
-  &lt;/body&gt;
-&lt;/html&gt;</pre>
-</div>
-
-<p>{{ EmbedLiveSample('Hidden_example', '100%', 400, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('Using_event_targets', '100%', 430, "", "") }}</p>
 
 <p>Most event handlers you'll encounter have a standard set of properties and functions (methods) available on the event object; see the {{domxref("Event")}} object reference for a full list. Some more advanced handlers, however, add specialist properties containing extra data that they need to function. The <a href="/en-US/docs/Web/API/MediaStream_Recording_API">Media Recorder API</a>, for example, has a <code>dataavailable</code> event, which fires when some audio or video has been recorded and is available for doing something with (for example saving it, or playing it back). The corresponding <a href="/en-US/docs/Web/API/MediaRecorder/ondataavailable">ondataavailable</a> handler's event object has a <code>data</code> property available containing the recorded audio or video data to allow you to access it and do something with it.</p>
 
@@ -390,7 +370,7 @@ form.onsubmit = function(e) {
 
 <p>Obviously, this is pretty weak form validation — it wouldn't stop the user validating the form with spaces or numbers entered into the fields, for example — but it is OK for example purposes. The output is as follows:</p>
 
-<p>{{ EmbedLiveSample('Preventing_default_behavior', '100%', 140, "", "", "hide-codepen-jsfiddle") }}</p>
+<p>{{ EmbedLiveSample('Preventing_default_behavior', '100%', 140, "", "") }}</p>
 
 <div class="notecard note">
   <p><strong>Note:</strong> for the full source code, see <a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/events/preventdefault-validation.html">preventdefault-validation.html</a> (also see it <a href="https://mdn.github.io/learning-area/javascript/building-blocks/events/preventdefault-validation.html">running live</a> here.)</p>
@@ -398,113 +378,89 @@ form.onsubmit = function(e) {
 
 <h3 id="Event_bubbling_and_capture">Event bubbling and capture</h3>
 
-<p>The final subject to cover here is something that you won't come across often, but it can be a real pain if you don't understand it. Event bubbling and capture are two mechanisms that describe what happens when two handlers of the same event type are activated on one element. Let's look at an example to make this easier — open up the <a href="https://mdn.github.io/learning-area/javascript/building-blocks/events/show-video-box.html">show-video-box.html</a> example in a new tab (and the <a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/events/show-video-box.html">source code</a> in another tab.) It is also available live below:</p>
+<p>The final subject to cover here is something that you won't come across often, but it can be a real pain if you don't understand it. Event bubbling and capture are two mechanisms that describe what happens when two handlers of the same event type are activated on one element.</p>
 
-<div class="hidden">
-<h6 id="Hidden_video_example">Hidden video example</h6>
+<h4>Video player example</h4>
 
-<pre class="brush: html">&lt;!DOCTYPE html&gt;
-&lt;html&gt;
-  &lt;head&gt;
-    &lt;meta charset="utf-8"&gt;
-    &lt;title&gt;Show video box example&lt;/title&gt;
-    &lt;style&gt;
-      div {
-        position: absolute;
-        top: 50%;
-        transform: translate(-50%,-50%);
-        width: 480px;
-        height: 380px;
-        border-radius: 10px;
-        background-color: #eee;
-        background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.1));
-      }
+<p>Let's look at an example to make this easier — open up the <a href="https://mdn.github.io/learning-area/javascript/building-blocks/events/show-video-box.html">show-video-box.html</a> example in a new tab (and the <a href="https://github.com/mdn/learning-area/blob/master/javascript/building-blocks/events/show-video-box.html">source code</a> in another tab.) It is also available live below:</p>
 
-      .hidden {
-        left: -50%;
-      }
+<p>{{ EmbedLiveSample('Video_player_example', '100%', 500, "", "") }}</p>
 
-      .showing {
-        left: 50%;
-      }
-
-      div video {
-        display: block;
-        width: 400px;
-        margin: 40px auto;
-      }
-
-    &lt;/style&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-    &lt;button&gt;Display video&lt;/button&gt;
-
-    &lt;div class="hidden"&gt;
-      &lt;video&gt;
-        &lt;source src="https://raw.githubusercontent.com/mdn/learning-area/master/javascript/building-blocks/events/rabbit320.mp4" type="video/mp4"&gt;
-        &lt;source src="https://raw.githubusercontent.com/mdn/learning-area/master/javascript/building-blocks/events/rabbit320.webm" type="video/webm"&gt;
-        &lt;p&gt;Your browser doesn't support HTML5 video. Here is a &lt;a href="rabbit320.mp4"&gt;link to the video&lt;/a&gt; instead.&lt;/p&gt;
-      &lt;/video&gt;
-    &lt;/div&gt;
-
-    &lt;script&gt;
-
-      const btn = document.querySelector('button');
-      const videoBox = document.querySelector('div');
-      const video = document.querySelector('video');
-
-      btn.onclick = function() {
-        displayVideo();
-      }
-
-      function displayVideo() {
-        if(videoBox.getAttribute('class') === 'hidden') {
-          videoBox.setAttribute('class','showing');
-        }
-      }
-
-      videoBox.addEventListener('click',function() {
-        videoBox.setAttribute('class','hidden');
-      });
-
-      video.addEventListener('click',function() {
-        video.play();
-      });
-
-    &lt;/script&gt;
-  &lt;/body&gt;
-&lt;/html&gt;</pre>
-</div>
-
-<p>{{ EmbedLiveSample('Hidden_video_example', '100%', 500, "", "", "hide-codepen-jsfiddle") }}</p>
-
-<p>This is a pretty simple example that shows and hides a {{htmlelement("div")}} with a {{htmlelement("video")}} element inside it:</p>
+<p>This example shows and hides a {{htmlelement("div")}} with a {{htmlelement("video")}} element inside it:</p>
 
 <pre class="brush: html">&lt;button&gt;Display video&lt;/button&gt;
 
 &lt;div class="hidden"&gt;
   &lt;video&gt;
-    &lt;source src="rabbit320.mp4" type="video/mp4"&gt;
-    &lt;source src="rabbit320.webm" type="video/webm"&gt;
+    &lt;source src="https://raw.githubusercontent.com/mdn/learning-area/master/javascript/building-blocks/events/rabbit320.mp4" type="video/mp4"&gt;
+    &lt;source src="https://raw.githubusercontent.com/mdn/learning-area/master/javascript/building-blocks/events/rabbit320.webm" type="video/webm"&gt;
     &lt;p&gt;Your browser doesn't support HTML5 video. Here is a &lt;a href="rabbit320.mp4"&gt;link to the video&lt;/a&gt; instead.&lt;/p&gt;
   &lt;/video&gt;
-&lt;/div&gt;</pre>
+&lt;/div&gt;
+</pre>
 
-<p>When the {{htmlelement("button")}} is selected, the video is displayed, by changing the class attribute on the <code>&lt;div&gt;</code> from <code>hidden</code> to <code>showing</code> (the example's CSS contains these two classes, which position the box off the screen and on the screen, respectively):</p>
+<p>When the {{htmlelement("button")}} is clicked, the video is displayed, by changing the class attribute on the <code>&lt;div&gt;</code> from <code>hidden</code> to <code>showing</code> (the example's CSS contains these two classes, which position the box off the screen and on the screen, respectively):</p>
 
-<pre class="brush: js">btn.onclick = function() {
-  videoBox.setAttribute('class', 'showing');
-}</pre>
+<pre class="brush: js">
+  const btn = document.querySelector('button');
+  const videoBox = document.querySelector('div');
 
-<p>We then add a couple more <code>onclick</code> event handlers — the first one to the <code>&lt;div&gt;</code> and the second one to the <code>&lt;video&gt;</code>. Now, when the area of the <code>&lt;div&gt;</code> outside the video is selected, the box should be hidden again and when the video itself is selected, the video should start to play.</p>
+  btn.onclick = function() {
+    displayVideo();
+  }
+
+  function displayVideo() {
+    if(videoBox.getAttribute('class') === 'hidden') {
+      videoBox.setAttribute('class','showing');
+    }
+  }
+
+  videoBox.addEventListener('click',function() {
+    videoBox.setAttribute('class','hidden');
+  });
+</pre>
+
+
+<pre class="brush: css hidden">
+div {
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  width: 480px;
+  height: 380px;
+  border-radius: 10px;
+  background-color: #eee;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.1));
+}
+
+.hidden {
+  left: -50%;
+}
+
+.showing {
+  left: 50%;
+}
+
+div video {
+  display: block;
+  width: 400px;
+  margin: 40px auto;
+}
+</pre>
+
+<p>We then add a couple more <code>onclick</code> event handlers — the first one to the <code>&lt;div&gt;</code> and the second one to the <code>&lt;video&gt;</code>:</p>
 
 <pre class="brush: js">videoBox.onclick = function() {
   videoBox.setAttribute('class', 'hidden');
 };
 
+const video = document.querySelector('video');
+
 video.onclick = function() {
   video.play();
 };</pre>
+
+<p>Now, when the area of the <code>&lt;div&gt;</code> outside the video is selected, the box should be hidden again and when the video itself is selected, the video should start to play.</p>
 
 <p>But there's a problem — currently, when you select the video it starts to play, but it causes the <code>&lt;div&gt;</code> to be hidden at the same time. This is because the video is inside the <code>&lt;div&gt;</code> — it is part of it — so selecting the video actually runs <em>both</em> the above event handlers.</p>
 
@@ -588,7 +544,7 @@ div:hover {
 </pre>
 
 <pre class="brush: js">
-/* 
+/*
  * source 1: https://dom.spec.whatwg.org/#dom-event-eventphase
  * source 2: https://stackoverflow.com/a/4616720/15266715
 */
